<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.tonyk.promac.Mainpage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_above="@+id/mainpageText"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/ripple_effect"
            android:src="@drawable/ic_exit_to_app_white_24dp"
            android:contentDescription="@string/logoutBtn"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/mainpageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/mainpageText"
            android:textColor="#fff"
            android:textSize="27sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3">

        <!-- Row 1, Column 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewProfile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageProfile"
                    android:src="@drawable/ic_person_pin_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardProfile"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 1, Column 2 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewMessages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/cardImageMessage"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageMessage"
                    android:src="@drawable/ic_sms_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardMessages"
                    android:textAlignment="center"
                    android:textColor="#fff"

                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 2, Column 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewCreateEvent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageCreateEvent"
                    android:src="@drawable/add_event" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCreateEvent"
                    android:textAlignment="center"
                    android:textColor="#fff"

                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 2, Column 2 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageSearch"
                    android:src="@drawable/ic_search_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardSearch"
                    android:textAlignment="center"
                    android:textColor="#fff"

                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 3, Column 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewEvents"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageEditEvent"
                    android:src="@drawable/edit_event" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardEditEvent"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 3, Column 2 -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewCalender"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="#48000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cardImageCalender"
                    android:src="@drawable/ic_event_note_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCalender"
                    android:textAlignment="center"
                    android:textColor="#fff"

                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>

</LinearLayout>

